# boost-numpy-minimal-bug

./: CMakeLists.txt  hello.cpp
